--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -280,5 +280,8 @@
     "**/node_modules/**": true,
     "**/dist/**": true,
     "**/build/**": true
-  }
+  },
+  "editor.stickyScroll.enabled": true,
+  "editor.inlineHints.enabled": true,
+  "editor.suggest.showStatusBar": true
 }
