--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "build": "remix vite:build",
     "dev": "remix vite:dev",
+    "genkit:dev": "npx genkit start -- npm run dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+    "genkit:watch": "npx genkit start -- npx tsx --watch src/app/genkit.ts",
     "start": "remix-serve ./build/server/index.js",
     "typecheck": "tsc",
     "build:css": "tailwindcss -i ./app/styles/tailwind.css -o ./app/styles/tailwind.generated.css",
@@ -17,10 +19,9 @@
     "@eslint/config-array": "^0.19.1",
     "@eslint/object-schema": "^2.1.5",
     "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
-    "@google-cloud/container": "^5.19.0",
-
-    "@google-cloud/vertexai": "^0.1.0",
     "@google-ai/generativelanguage": "^1.1.0",
+    "@google-cloud/container": "^5.19.0",
+    "@google-cloud/vertexai": "^0.1.0",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.9.1",
@@ -70,13 +71,15 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "genkit-cli": "^0.9.12",
     "jest": "^29.7.0",
     "postcss": "^8.4.49",
     "prettier": "^2.8.8",
     "remix-development-tools": "^4.7.7",
     "tailwindcss": "^3.4.16",
+    "tsx": "^4.19.2",
     "twin.macro": "^3.4.1",
-    "typescript": "^5.1.6",
+    "typescript": "^5.7.2",
     "vite": "^5.1.0",
     "vite-tsconfig-paths": "^4.2.1"
   },
