--- a/package.json
+++ b/package.json
@@ -32,11 +32,16 @@
     "axios": "^1.7.9",
     "composable-functions": "^4.5.0",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.4.7",
+    "firebase-admin": "^13.0.2",
+    "firebase-functions": "^6.2.0",
+    "genkit": "^0.9.12",
     "glob": "^9.3.5",
     "google-auth-library": "^9.15.0",
     "i": "^0.3.7",
     "immer": "^10.1.1",
     "isbot": "^4.1.0",
+    "lodash": "^4.17.21",
     "lru-cache": "^11.0.2",
     "npm": "^11.0.0",
     "react": "^18.2.0",
@@ -55,7 +60,11 @@
   "devDependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@headlessui/tailwindcss": "^0.2.1",
     "@remix-run/dev": "2.15.2",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/typography": "^0.5.15",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@types/react": "^18.2.20",
@@ -76,7 +85,9 @@
     "postcss": "^8.4.49",
     "prettier": "^2.8.8",
     "remix-development-tools": "^4.7.7",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.16",
+    "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.19.2",
     "twin.macro": "^3.4.1",
     "typescript": "^5.7.2",
